--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,20 @@
 {
-  "singleQuote": true
+	"arrowParens": "always",
+	"bracketSameLine": false,
+	"bracketSpacing": true,
+	"semi": true,
+	"singleQuote": true,
+	"jsxSingleQuote": true,
+	"quoteProps": "as-needed",
+	"trailingComma": "all",
+	"singleAttributePerLine": false,
+	"htmlWhitespaceSensitivity": "css",
+	"vueIndentScriptAndStyle": false,
+	"proseWrap": "preserve",
+	"insertPragma": false,
+	"printWidth": 88,
+	"requirePragma": false,
+	"tabWidth": 1,
+	"useTabs": true,
+	"embeddedLanguageFormatting": "auto"
 }
